src/components/Hero/Hero.module.scss
@import '~react-md/src/scss/react-md';

.hero {
    margin-top: 10px;
    overflow: hidden;

    h1,
    h2 {
        color: white;
    }

    h1 {
        display: block;
        font-size: 9.5vw;
        font-weight: bold;
        line-height: 1em;

        @media screen and (max-width: $md-tablet-min-width) {
            font-size: 19vw;
        }
    }

    h2 {
        font-size: 2rem;
        margin-left: 0.4rem;
    }
}

